# gamdpy

./: .gitignore  .gitlab-ci.yml  README.md  github_ci.py  installation.md  pyproject.toml  pytest.ini  requirements.txt  test_colarray.col  test_colarray.npy
benchmarks/: README.md  analyze_LJ.py  benchmark_LJ.py  benchmark_Simulation_LJ.py  plot_tps.py
benchmarks/Data/: benchmark_LJ_Last_run.csv  benchmark_LJ_Quadro_P2000_Mobile.csv  benchmark_LJ_RTX_2060_Super_AT.pkl  benchmark_LJ_RTX_2060_Super_AT_2.csv  benchmark_LJ_RTX_2080_Ti_AT.pkl  benchmark_LJ_RTX_2080_Ti_bead65_AT.pkl  benchmark_LJ_RTX_2080_Ti_i43_AT.pkl  benchmark_LJ_RTX_3070_Laptop.csv  benchmark_LJ_RTX_4070.csv  benchmark_LJ_RTX_4070_AT.csv  benchmark_LJ_RTX_4070_AT.pkl  benchmark_LJ_RTX_4090_AT.csv  benchmark_LJ_RTX_4090_AT.pkl
docs/: requirements.txt
docs/source/: api.rst  conf.py  development.md  examples.rst  features.md  index.rst  installation.md  quick_start.ipynb  tutorials.rst
examples/: 2D.py  3Dviz.html  3Dviz.ipynb  4D.py  ASD.py  D2.py  D4.py  D8.py  LJ.py  LJchain.py  LJchain_wall.py  LJoutput.ipynb  LJoutput.py  LJoutput2.ipynb  LJphases.py  NVU_RT_kob_andersen.py  NVU_RT_simple.py  README.md  analyze_LJ.py  analyze_dynamics.py  analyze_structure.py  analyze_thermodynamics.py  atomistic_walls.py  bcc_lattice.py  benchmark.ipynb  benchmarking.py  blocks.py  calc_rdf_from_h5.py  calc_rdf_from_rumd3.py  calc_sq_from_h5.py  colarray.ipynb  consistency_NPT.py  evaluator_einstein_crystal.py  evaluator_inverse_powerlaw.py  generic_molecules.py  generic_molecules_topology.py  hydrocorr.py  isochore.py  isomorph.py  kablj.py  (+28 more)
examples/Data/: LJ_pdict.pkl  LJ_scalars.csv  final.h5
examples/molecules/: ethanol.py  ethanol.xml
gamdpy/calculators/: calculator_hydrodynamic_correlations.py  calculator_hydrodynamic_profile.py  calculator_radial_distribution.py  calculator_structure_factor.py  calculator_widom_insertion.py  conf_saver.py  momentum_reset.py  scalar_calculator.py
gamdpy/configuration/: Configuration.py  colarray.py  topology.py
gamdpy/integrators/: NPT_Langevin.py  NVE.py  NVT.py  NVT_Langevin.py  SLLOD.py
gamdpy/interactions/: bonds.py  pair_potential.py  planar.py
rumdpy/: Configuration.py  Evaluater.py  Simbox.py  Simulation.py  __init__.py  calculators.py  check_gridsync.py  check_system.py  colarray.py  integrators.py  interactions.py  log.txt  misc.py  potential_functions.py  pytest.ini
tests/: not_used_examples.py  object_lib.py  test_JIT.py  test_LJ_cpu.py  test_LJ_nogpu.py  test_LJ_nxyz.py  test_LJ_nxyz_Simulation.py  test_SLLOD.py  test_TrajectoryIO.py  test_bare.py  test_example_structure_factor.py  test_examples.py  test_get_default_sim.py  test_gridsync.py  test_linked_lists_nblist.py  test_load_output.py  test_make_lattice.py  test_npt_atomic.py  test_npt_atomic_code.py  test_nve_toxvaerd.py  test_nvt_langevin.py  test_object_lib.py  test_planar_interactions.py  test_potential_functions.py  test_radial_distrubution.py  test_savers.py  test_simbox.py  test_stress.py  test_structure_factor.py  test_topology.py  test_tutorials.py  test_widom.py  test_z_examples.py
tests_ci/: test_LJ_cpu.py  test_LJ_gpu.py
tutorials/: my_first_simulation.ipynb  quick_start.ipynb
(+119 files in other folders)
