[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rumdpy"
version = "0.0.1"
authors = [
  { name="Thomas Schrøder", email="tbs@ruc.dk" },
]
description = "Roskilde University Molecular Dynamics Python Package"
readme = "README.md"
requires-python = ">=3.7"
# TODO: drop matplotlib, pandas
dependencies = [
	     "hypothesis",
	     "matplotlib",
	     "numba",
	     "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
